Refining documentation.